# RECODE

./: .buildinfo  .gitignore  .gitlab-ci.yml  LICENSE  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  scRECODE-0.1.2-py3-none-any.whl  screcode-0.2.5-py3-none-any.whl  screcode.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree  screcode.doctree
.doctrees/Tutorials/: Tutorial_ATAC.doctree  Tutorial_Integration.doctree  Tutorial_Multiome.doctree  Tutorial_RNA.doctree  Tutorial_RNA_comp.doctree  Tutorial_SpatialTranscriptome.doctree  index.doctree
.doctrees/reference/: index.doctree  screcode.doctree
.github/workflows/: main.yml
R/: DESCRIPTION  LICENSE  NAMESPACE  README.md
R/R/: RECODE.R  scRECODE.R
R/Tutorial/: Run_RECODE_on_R_example.html  Run_RECODE_on_R_tutorial.html  Run_RECODE_on_R_tutorial3_reticulate.Rmd  (+1 more)
R/man/: RECODE-package.Rd  (+2 more)
Tutorials/: Tutorial_ATAC.html  Tutorial_Integration.html  Tutorial_Multiome.html  Tutorial_RNA.html  Tutorial_RNA_comp.html  Tutorial_SpatialTranscriptome.html  Tutorial_SpatialTranscriptome.ipynb  index.html
_sources/: index.rst.txt  modules.rst.txt  screcode.rst.txt
python/: .gitconfig  .zenodo.json  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
python/Tutorials/: Tutorial_Multiome.ipynb
python/recode/: screcode.py
python/screcode/: __init__.py  integrecode_test.ipynb  screcode.py
python/screcode/.ipynb_checkpoints/: screcode_test-checkpoint.ipynb
python/screcode_work/: screcode.py
python/screcode_work/.ipynb_checkpoints/: screcode-checkpoint.py
python/sphinx/: api.rst  conf.py  example.rst  index.rst
python/sphinx/Tutorials/: Tutorial_ATAC.ipynb  Tutorial_Integration.ipynb  Tutorial_Multiome.ipynb  Tutorial_RNA.ipynb  Tutorial_RNA_comp.ipynb  Tutorial_SpatialTranscriptome_VisiumHD.ipynb  Tutorial_SpatialTranscriptome_Xenium.ipynb  example_10X_ATAC.rst  index.rst
python/sphinx/Tutorials/.ipynb_checkpoints/: Tutorial_ATAC-checkpoint.ipynb  Tutorial_RNA-checkpoint.ipynb
python/sphinx/examples/: example_10X.rst  example_10X_ATAC.rst  example_10X_RNA.ipynb  example_10X_RNA.rst  example_10X_RNA_.ipynb  example_10X_RNA_h5.ipynb  index.rst
python/sphinx/examples/.ipynb_checkpoints/: example_10X_RNA-checkpoint.ipynb
python/sphinx/reference/: index.rst  screcode.rst
reference/: index.html  screcode.html
screcode/: screcode.py
screcode_work/: __init__.py  screcode.py  test_scRECODE_HCA.ipynb  test_screcode_2021-09-24.ipynb
(+9 files in other folders)
