[tool.poetry]
name = "scRECODE"
version = "0.2.1"
description = "RECODE - resolution of the curse of dimensionality in single-cell data analysis"
authors = ["Yusuke Imoto"]
readme = "README.md"
repository = "https://github.com/yusuke-imoto-lab/RECODE"
documentation = "https://yusuke-imoto-lab.github.io/RECODE/"

[tool.poetry.dependencies]
python       = ">=3.8,<3.12"
datetime     = ">=4.0"
scikit-learn = ">=0.24"
scipy = "^1.8.1"
seaborn = ">=0.11.2"
matplotlib = ">=3.4.3"
adjustText = ">=0.7"
anndata = "^0.8.0"
numpy = ">=1.20"
scanpy = ">=1.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
